--- a/tex/library.bib
+++ b/tex/library.bib
@@ -320,7 +320,7 @@
   keywords = {Vapor intrusion,VOC,Model,van Genuchten,Vapor intrusion factors,Risk assessment,Soil moisture,Capillary fringe,Soil contaminant concentration,Three-dimensional},
   author = {Shen, Rui and Pennell, Kelly G. and Suuberg, Eric M.},
   file = {/home/jonathan/lib/Zotero/storage/J8P4EQE9/Shen, Pennell, Suuberg - 2013 - Influence of Soil Moisture on Soil Gas Vapor Concentration for Vapor Intrusion.pdf;/home/jonathan/lib/Zotero/storage/L2BWE46Y/ees.2013.0133.pdf},
-  note = {00015 
+  note = {00015
 WOS:000325689400005}
 }
 
@@ -361,7 +361,7 @@ WOS:000325689400005}
   note = {00037}
 }
 
-@article{nielsen_remediation_2017-1,
+@article{nielsen_remediation_2017,
   langid = {english},
   title = {Remediation Techniques for Mitigating Vapor Intrusion from Sewer Systems to Indoor Air},
   volume = {27},
@@ -374,7 +374,7 @@ WOS:000325689400005}
   urldate = {2018-07-19},
   date = {2017-06-07},
   pages = {67-73},
-  keywords = {Vapor intrusion,Controlled pressure method,Preferential pathway,Sewer,Remediation,Sampling methods,Sewer systems},
+  keywords = {Controlled pressure method,Preferential pathway,Remediation,Sampling methods,Sewer,Sewer systems,Vapor intrusion},
   author = {Nielsen, Karin Birn and Hvidberg, Boerge},
   file = {/home/jonathan/lib/Zotero/storage/KS72RYNZ/Nielsen and Hvidberg - Remediation techniques for mitigating vapor intrus.pdf;/home/jonathan/lib/Zotero/storage/LJNP7FNN/Nielsen, Hvidberg - 2017 - Remediation techniques for mitigating vapor intrusion from sewer systems to indoor air.pdf;/home/jonathan/lib/Zotero/storage/9S4CH3ZA/rem.html},
   note = {00002}
@@ -570,5 +570,3 @@ WOS:000325689400005}
   file = {/home/jonathan/lib/Zotero/storage/TVHIQSR7/00031305.1992.html},
   note = {01769}
 }
-
-
