Added Eric's changes

--- a/tex/library.bib
+++ b/tex/library.bib
@@ -9,6 +9,18 @@
   note = {00005}
 }
 
+@misc{schumacher_fluctuation_2012,
+  title = {Fluctuation of {{Indoor Radon}} and {{VOC Concentrations Due}} to {{Seasonal Variations}}},
+  url = {https://cfpub.epa.gov/si/si_public_record_report.cfm?dirEntryId=247212},
+  publisher = {{U.S Environmental Protection Agency}},
+  urldate = {2018-05-31},
+  date = {2012-07-11},
+  keywords = {EPA,Indianapolis duplex,Radon,Seasonal variation,Vapor intrusion,VOC},
+  author = {Schumacher, B. and Zimmerman, J. H. and Truesdale, R. and Lutes, Christopher C.},
+  file = {/home/jonathan/lib/Zotero/storage/ABS6CUQN/Schumacher et al. - 2012 - Fluctuation of Indoor Radon and VOC Concentrations.PDF},
+  note = {00002}
+}
+
 @thesis{holton_evaluation_2015,
   title = {Evaluation of {{Vapor Intrusion Pathway Assessment Through Long}}-{{Term Monitoring Studies}}},
   url = {https://repository.asu.edu/attachments/150778/content/Holton_asu_0010E_15040.pdf},
@@ -320,7 +332,7 @@
   keywords = {Vapor intrusion,VOC,Model,van Genuchten,Vapor intrusion factors,Risk assessment,Soil moisture,Capillary fringe,Soil contaminant concentration,Three-dimensional},
   author = {Shen, Rui and Pennell, Kelly G. and Suuberg, Eric M.},
   file = {/home/jonathan/lib/Zotero/storage/J8P4EQE9/Shen, Pennell, Suuberg - 2013 - Influence of Soil Moisture on Soil Gas Vapor Concentration for Vapor Intrusion.pdf;/home/jonathan/lib/Zotero/storage/L2BWE46Y/ees.2013.0133.pdf},
-  note = {00015
+  note = {00015 
 WOS:000325689400005}
 }
 
@@ -361,7 +373,7 @@ WOS:000325689400005}
   note = {00037}
 }
 
-@article{nielsen_remediation_2017,
+@article{nielsen_remediation_2017-1,
   langid = {english},
   title = {Remediation Techniques for Mitigating Vapor Intrusion from Sewer Systems to Indoor Air},
   volume = {27},
@@ -428,7 +440,7 @@ WOS:000325689400005}
   date = {1961-01},
   pages = {1200},
   author = {Millington, R. J. and Quirk, J. P.},
-  note = {01813}
+  note = {01808}
 }
 
 @article{dan_capillary_2012,
@@ -547,10 +559,10 @@ WOS:000325689400005}
   urldate = {2018-07-16},
   date = {2018-03-01},
   pages = {1149-1162},
-  keywords = {Vapor intrusion,Spatial variability,Temporal variability,Preferential pathway,Sewer,Sampling methods,Sewer systems,Trichloroethylene},
+  keywords = {Preferential pathway,Sampling methods,Sewer,Sewer systems,Spatial variability,Temporal variability,Trichloroethylene,Vapor intrusion},
   author = {Roghani, Mohammadyousef and Jacobs, Olivia P. and Miller, Anthony and Willett, Evan J. and Jacobs, James A. and Viteri, C. Ricardo and Shirazi, Elham and Pennell, Kelly G.},
   file = {/home/jonathan/lib/Zotero/storage/HD77KLVB/Roghani et al. - 2018 - Occurrence of chlorinated volatile organic compoun.pdf;/home/jonathan/lib/Zotero/storage/FJSQREUV/S0048969717329236.html},
-  note = {00001}
+  note = {00002}
 }
 
 @article{altman_introduction_1992,
@@ -568,5 +580,7 @@ WOS:000325689400005}
   keywords = {Confidence intervals,Local linear regression,Model building,Model checking,Smoothing},
   author = {Altman, N. S.},
   file = {/home/jonathan/lib/Zotero/storage/TVHIQSR7/00031305.1992.html},
-  note = {01769}
+  note = {01805}
 }
+
+
